--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: "mybrice";
-    src: url(/../fonts/Brice-BlackSemiExpanded.otf);
+    src: url(/./fonts/Brice-BlackSemiExpanded.otf);
 }
 
 .header {
